fontsize on small screen fixed

--- a/src/components/balloon/Balloon.css
+++ b/src/components/balloon/Balloon.css
@@ -1,6 +1,6 @@
 .balloon {
-    width: 80px;
-    height: 100px;
+    width: 4.5rem;
+    height: 6rem;
     background: #fff;
     border: hidden;
     border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3rem;
+    font-size: 2.1rem;
     font-weight: 500;
     height: 100%;
   }
